welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: not found: value cigards
	if ((cigars>39 && cigards<61)) {
                          ^